Fixed horizontal scroll issue

--- a/styles.css
+++ b/styles.css
@@ -553,9 +553,9 @@ button{
 
 
 
-    min-width: 100vw;
-    min-height: 100vh;
-    max-height: 100vh;
+    min-width: 100%;
+    min-height: 100%;
+    max-height: 100%;
     width: auto;
 
     left: 0;
@@ -570,7 +570,7 @@ button{
     img{
         width: auto;
         max-height: 90vh;
-        max-width: 100vw;
+        max-width: 100%;
         
     }
     
@@ -794,6 +794,7 @@ form button{
     .mainLeft{
         width: 80%;
         align-items: center;
+        min-width: fit-content;
     }
 
     .mainRight{
@@ -833,7 +834,7 @@ form button{
 
     .footerBig{
         gap: 100px;
-        padding: 50px;
+        padding: 100px;
         justify-content: center;
     }
 
@@ -846,16 +847,16 @@ form button{
 @media(max-width: 650px){
 
     .mainLeft h1, .mainLeft h5{
-        padding-left: 50px;
-        padding-right: 50px;
+        text-wrap: wrap;
     }
 
     .mainLeft h1{
         font-size: 15vw;
     }
 
-    .mainLeft h5{
+    .mainLeft h5, .mainLeft h5 span{
         font-size: 10vw;
+
     }
 
     .mainLeft button{
